@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
-<scraper framework="1.0" date="2010-12-16" >
+<scraper framework="1.1" date="2013-01-02">
 	<NfoUrl dest="3">
 			<RegExp input="$$1" output="&lt;details&gt;&lt;url function=&quot;ImdbNfoToSratimLink&quot;&gt;http://sratim.co.il/browse.php?cs=movies&q=tt\1|User-Agent=Mozilla%2F4.0%20(compatible%3B%20MSIE%207.0%3B%20Windows%20NT%206.0)&lt;/url&gt;&lt;/details&gt;" dest="3">
 					<expression noclean="1">imdb....?/title/tt([0-9]*)</expression>
@@ -75,14 +75,11 @@
 			</RegExp>
 
 			<!-- actors lower list -->
-			 <RegExp input="$$1" output="\1" dest="8">
-				<expression noclean="1">&lt;td class="actorlistbg"[^&gt;]*&gt;(.*?)&lt;/table&gt;</expression>
-			</RegExp>
-			 <RegExp input="$$8" output="&lt;actor&gt;&lt;name&gt;\1&lt;/name&gt;&lt;/actor&gt;" dest="5+">
-				<expression repeat="yes" trim="1">&lt;a href="profileview.php\?id=[^"]*"&gt;&lt;b&gt;([^&lt;]*)&lt;/b&gt;</expression>
+			 <RegExp input="$$1" output="&lt;actor&gt;&lt;name&gt;\1&lt;/name&gt;&lt;/actor&gt;" dest="5+">
+				<expression repeat="yes" trim="1">&lt;a href="profileview.php\?id=[^"]*" itemprop="actors"&gt;([^&lt;]*)&lt;/a&gt;</expression>
 			</RegExp>
 			<RegExp conditional="fullcredits" input="$$8" output="&lt;url function=&quot;GetActorDetails&quot;&gt;http://www.sratim.co.il/profileview.php?id=\1&lt;/url&gt;" dest="5+">
-				<expression repeat="yes">&lt;a href="profileview.php\?id=([^"]*)"&gt;&lt;b&gt;[^&lt;]*&lt;/b&gt;</expression>
+				<expression repeat="yes">&lt;a href="profileview.php\?id=([^"]*)" itemprop="actors"&gt;[^&lt;]*&lt;/a&gt;</expression>
 			</RegExp>
 			
 			<!--director -->
@@ -103,13 +100,13 @@
 			<!--rating (10)-->
 			<RegExp input="$INFO[ratingFrom]" output="$$10" dest="5+">
 				<RegExp  input="$$1" output="&lt;rating&gt;\1&lt;/rating&gt;" dest="10">
-					<expression trim="1">&lt;span class="rank_redtext"[^&gt;]*&gt;([^&lt;]*)&lt;/span&gt;</expression>
+					<expression trim="1">&lt;span id="ratingnumber"[^&gt;]*&gt;([^&lt;]*)&lt;/span&gt;</expression>
 				</RegExp>
 				<expression>Sratim</expression>      
 			</RegExp>
 			<RegExp input="$INFO[ratingFrom]" output="$$10" dest="5+">
-				<RegExp input="$$1" output="&lt;votes&gt;0&lt;/votes&gt;" dest="10">
-					<!--<expression trim="1" repeat="no">&lt;span.*?&gt;([0-9]+?) מדרגים&lt;/span&gt;</expression>-->
+				<RegExp input="$$1" output="&lt;votes&gt;\1&lt;/votes&gt;" dest="10">
+					<expression trim="1" repeat="no">&lt;span itemprop="ratingCount"&gt;([0-9]+?)&lt;/span&gt;</expression>
 					<expression />
 				</RegExp>
 				<expression>Sratim</expression>      
@@ -139,8 +136,7 @@
 					<expression trim="1">http://www.imdb.com/title/(tt[^"]+)</expression>
 				</RegExp>
 				<expression>MoviePosterDB</expression>
-			</RegExp>
-			
+			</RegExp>			
 			<!-- Fan Art (13)-->
 			<RegExp input="$INFO[fanart]" output="&lt;chain function=&quot;GetTMDBFanartByIdChain&quot;&gt;$$13&lt;/chain&gt;" dest="5+">
 				<RegExp input="$$1" output="\1" dest="13">
